# chihiro

./: .gitignore  Cargo.toml  README.md  batch.toml  benchmark_results.prisma  chinook.toml  hasura.toml  metrics.db  ordering.toml  photon.toml  sql_load_test.toml  test_queries.ndjson  test_run.toml
.buildkite/: docker.sh  mysql.sh  pipeline.sh  postgres.sh
datamodels/: mysql_local.prisma  postgres_local.prisma
docker/: docker-compose.mysql.yml  docker-compose.postgres.yml
docker/chinook/mysql/: Chinook_MySql.sql
docker/chinook/postgres/: Chinook_PostgreSql.sql
kibana/: query_mysql_vs_psql_p50_template.ndjson  query_mysql_vs_psql_p95_template.ndjson  query_mysql_vs_psql_p99_template.ndjson  query_p50p95p99_template.ndjson
queries/01_expandingRelations/: 01_expandingZeroLevels_fast.graphql  02_expandingZeroLevelsOnlyPrimary_fast.graphql  04_expandingOneLevel_fast.graphql  05_expandingOneLevelDataOnAllLevels_fast.graphql  06_expandingTwoLevels_slow.graphql  07_expandingTwoLevelsDataOnAllLevels_slow.graphql
queries/batch/: find_one_user_no_join_medium.graphql  find_one_user_with_one_join_slow.graphql  find_one_user_with_two_joins_slow.graphql
queries/chinook/: albums_tracks_genre_some_very-slow.graphql  ordering_on_three_levels_slow.graphql
queries/ordering/: 01_orderingOnTopLevel_slow.graphql  02_orderingOnTwoLevels_slow.graphql  explicit_order_one_join_slow.graphql  explicit_order_simple_medium.graphql  explicit_order_two_joins_very-slow.graphql  implicit_order_one_join_medium.graphql  implicit_order_simple_medium.graphql  implicit_order_two_joins_medium.graphql  unique_order_one_join_slow.graphql  unique_order_simple_medium.graphql  unique_order_two_joins_very-slow.graphql
queries/realWorld/: 01_slowRelated_slow.graphql
queries/relationFilter/: 06_artistsSomeAlbumsSomeTracks_slow.graphql
queries/sql_load_test/hasura/: big_very-slow.graphql  complex_fast.graphql  complex_slow.graphql  one_user_joins_posts_comments_slow.graphql  ordering_medium.graphql  pagination_medium.graphql  pagination_slow.graphql  simple_fast.graphql  simpler_complex_fast.graphql
queries/sql_load_test/photon/: big_very-slow.json  complex_fast.json  ordering_fast.json  (+3 more)
src/: bar.rs  bench.rs  config.rs  console_observer.rs  error.rs  json_observer.rs  kibana.rs  main.rs  metrics_sender.rs  metrics_storage.rs  query_loader.rs  reporter.rs  requester.rs  response_summary.rs  server.rs
src/config/: query.rs
src/reporter/: slack.rs  stdout.rs  test.json
(+13 files in other folders)
