[package]
name = "chihiro"
version = "0.1.0"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "time", "macros"] }
futures = "0.3"
async-std = "1"
hyper = { git = "https://github.com/hyperium/hyper/" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls/" }
base64 = "0.11"
structopt = "0.3"
indicatif = "0.13"
metrics-runtime = "0.12"
metrics-core = "0.5"
metrics = "0.12"
serde = "1"
serde_json = "1"
serde_derive = "1"
http = "0.2"
elastic = "~0.21.0-pre.5"
toml = "0.5"
hdrhistogram = "6.3"
walkdir = "2"
console = "0.9"
rand = "0.7"
chrono = "0.4"
uuid = { version = "0.8", features = ["v1"] }
ssh2 = "0.5"
