[package]
name = "chihiro"
version = "0.1.0"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["unstable", "attributes"] }
futures = "0.3"
isahc = { version = "0.8", features = ["json"] }
base64 = "0.11"
structopt = "0.3"
indicatif = "0.13"
metrics-runtime = "0.12"
metrics-core = "0.5"
metrics = "0.12"
serde = { version = "1.0", features = ["std", "serde_derive"] }
serde_json = "1.0"
http = "0.1"
toml = "0.5"
hdrhistogram = "6.3"
walkdir = "2"
console = "0.9"
rand = "0.7"
chrono = "0.4"
uuid = { version = "0.8", features = ["v1"] }
ssh2 = "0.5"
