[package]
name = "chihiro"
version = "0.1.0"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "time", "macros"] }
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
base64 = "0.11"
structopt = "0.3"
indicatif = "0.13"
metrics-runtime = "0.12"
metrics-core = "0.5"
metrics = "0.12"
serde = { version = "1.0", features = ["std", "serde_derive"] }
serde_json = "1.0"
http = "0.2"
toml = "0.5"
hdrhistogram = "6.3"
walkdir = "2"
rand = "0.7"
chrono = "0.4"
uuid = { version = "0.8", features = ["v1"] }
ssh2 = "0.5"
quaint = { version = "0.2.0-alpha.9", features = ["full", "serde-support"] }
async-trait = "0.1"
env_logger = "0.7"
log = "0.4"
console = "0.9"
url = "2"
reqwest = { version = "0.10", features = ["json"] }
thiserror = "1"
